--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
   "dependencies": {
     "inquirer": "^8.2.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jest": "^29.4.1"
+  }
 }
