--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "npm run test"
+    "test": "jest --verbose test/*"
   },
   "repository": {
     "type": "",
